# snapclient-ios

./: .gitignore  .swiftlint.yml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  project.yml
.github/workflows/: ci.yml
SnapClient/: Info.plist
SnapClient/App/: SnapClientApp.swift
SnapClient/Control/: SnapcastRPCClient.swift
SnapClient/Discovery/: ServerDiscovery.swift
SnapClient/Engine/: NowPlayingManager.swift  SnapClientEngine.swift
SnapClient/Engine/Bridge/: SnapClientCore-Bridging-Header.h
SnapClient/Models/: SavedServer.swift  SavedServersStore.swift
SnapClient/Views/: AboutView.swift  AddServerSheet.swift  ContentView.swift  EditSheets.swift  GroupsView.swift  PlayerView.swift  ServersView.swift
SnapClient/Views/Components/: SnapVolumeSlider.swift
SnapClientCore/: CMakeLists.txt
SnapClientCore/bridge/: snapclient_bridge.cpp  snapclient_bridge.h
SnapClientCore/cmake/: ios-simulator.toolchain.cmake  ios.toolchain.cmake
SnapClientCore/ios_player/: ios_audio_latency.h  ios_audio_latency.mm  ios_player.cpp  ios_player.hpp
SnapClientCore/ios_shim/: ios_controller_patch.hpp  ios_platform.hpp  ios_popen_override.h
SnapClientCore/ios_shim/CoreAudio/: CoreAudio.h
SnapClientCore/ios_shim/IOKit/: IOCFPlugIn.h  IOTypes.h
SnapClientCore/ios_shim/sys/: sysinfo.h
Tests/StabilityTests/: BridgeStabilityTests.cpp  ServerSwitchRaceTests.swift  SnapClientStabilityTests.swift
docs/: ROADMAP.md  WBS_SWIFT_REWRITE.md  final-hardening-audit.md  final-stability-tests.md  fixes-prompt.md  forensic-audit-v3.md  index.html  optimization-report.md  precision-hardening-prompt.md  privacy.html  refactoring-audit-v2.md  research-snapcast-client-ios.md  stability-hardening-plan.md  support.html
patches/: ios-controller.patch  ios-time-fix.patch  ios-time-provider-reset.patch  ios-time-sync-timeout.patch  ios-time-sync-wait.patch
scripts/: build-deps-sim.sh  build-deps.sh  run-bridge-tests.sh  run-stability-tests.sh
