cmake_minimum_required(VERSION 3.21)
project(SnapClientCore C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 11)

# ── iOS cross-compilation ────────────────────────────────────────────
# Check that we're cross-compiling for iOS
if(NOT CMAKE_SYSTEM_NAME STREQUAL "iOS")
  message(FATAL_ERROR
    "This CMakeLists.txt is for iOS only.\n"
    "Use: cmake -DCMAKE_TOOLCHAIN_FILE=cmake/ios.toolchain.cmake ..")
endif()

message(STATUS "Building for iOS ${CMAKE_OSX_DEPLOYMENT_TARGET}, arch ${CMAKE_OSX_ARCHITECTURES}")

# ── Paths ────────────────────────────────────────────────────────────
set(SNAPCAST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/vendor/snapcast"
    CACHE PATH "Path to snapcast source tree")
set(BOOST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/vendor/boost"
    CACHE PATH "Path to Boost headers")
set(FLAC_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/vendor/flac"
    CACHE PATH "Path to libFLAC (built for iOS)")
set(OPUS_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/vendor/opus"
    CACHE PATH "Path to libopus (built for iOS)")
set(OGG_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/vendor/ogg"
    CACHE PATH "Path to libogg (built for iOS)")

# ── Boost (header-only) ─────────────────────────────────────────────
include_directories(SYSTEM "${BOOST_ROOT}")

# ── iOS platform shim ───────────────────────────────────────────────
set(IOS_SHIM_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ios_shim")
set(IOS_PLAYER_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ios_player")

# ── Snapcast sources ────────────────────────────────────────────────
# Core client files (no main())
set(SNAPCLIENT_SOURCES
  # Client core
  ${SNAPCAST_DIR}/client/client_connection.cpp
  ${SNAPCAST_DIR}/client/controller.cpp
  ${SNAPCAST_DIR}/client/stream.cpp
  ${SNAPCAST_DIR}/client/time_provider.cpp

  # Decoders (no vorbis - requires libvorbis)
  ${SNAPCAST_DIR}/client/decoder/flac_decoder.cpp
  ${SNAPCAST_DIR}/client/decoder/pcm_decoder.cpp
  ${SNAPCAST_DIR}/client/decoder/opus_decoder.cpp
  ${SNAPCAST_DIR}/client/decoder/null_decoder.cpp

  # Player - CoreAudio (works on both macOS and iOS via shim) + File player
  ${SNAPCAST_DIR}/client/player/player.cpp
  ${SNAPCAST_DIR}/client/player/coreaudio_player.cpp
  ${SNAPCAST_DIR}/client/player/file_player.cpp

  # Common
  ${SNAPCAST_DIR}/common/base64.cpp
  ${SNAPCAST_DIR}/common/sample_format.cpp
  ${SNAPCAST_DIR}/common/resampler.cpp
  ${SNAPCAST_DIR}/common/stream_uri.cpp
  ${SNAPCAST_DIR}/common/utils/string_utils.cpp
)

# Include paths
include_directories(
  ${IOS_SHIM_DIR}            # iOS platform shim (must be first)
  ${IOS_PLAYER_DIR}          # iOS player
  ${SNAPCAST_DIR}
  ${SNAPCAST_DIR}/client
  ${SNAPCAST_DIR}/common
  ${FLAC_ROOT}/include
  ${OPUS_ROOT}/include
  ${OGG_ROOT}/include
)

# ── Compile definitions ─────────────────────────────────────────────
# Version string (normally generated by Snapcast CMake)
set(SNAPCAST_VERSION "0.34.0")

add_compile_definitions(
  VERSION="${SNAPCAST_VERSION}"
  IOS                    # iOS-specific code paths (must be before MACOS/FREEBSD checks)
  FREEBSD                # Disable sys/sysinfo.h (used as workaround)
  HAS_COREAUDIO          # Enable CoreAudio player (works on iOS via shim)
  HAS_FLAC               # Enable FLAC decoder
  HAS_OPUS               # Enable Opus decoder
  # HAS_OGG is NOT defined - we don't have libvorbis
  BOOST_ASIO_NO_DEPRECATED
)

# ── Static library: snapclient core ─────────────────────────────────
add_library(snapclient_core STATIC ${SNAPCLIENT_SOURCES})

target_link_directories(snapclient_core PRIVATE
  ${FLAC_ROOT}/lib
  ${OPUS_ROOT}/lib
  ${OGG_ROOT}/lib
)

target_link_libraries(snapclient_core PRIVATE
  FLAC
  opus
  ogg
  "-framework AudioToolbox"
  "-framework AVFAudio"
  "-framework Foundation"
  "-framework CoreFoundation"
)

# ── Bridge library (C interface for Swift) ───────────────────────────
add_library(snapclient_bridge STATIC
  ${CMAKE_CURRENT_SOURCE_DIR}/bridge/snapclient_bridge.cpp
)
target_link_libraries(snapclient_bridge PRIVATE snapclient_core)
target_include_directories(snapclient_bridge PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/bridge
)

# ── Install ──────────────────────────────────────────────────────────
install(TARGETS snapclient_core snapclient_bridge
  ARCHIVE DESTINATION lib
)
install(FILES bridge/snapclient_bridge.h
  DESTINATION include
)
